<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
        <!--android:orderInCategory="100" app:showAsAction="never" />-->

    <item
        android:id="@+id/profile"
        android:title="@string/menu_title_profile"
        android:icon="@drawable/ic_person_white_24dp"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/refresh"
        android:title="@string/menu_title_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="201"
        app:showAsAction="ifRoom"
        />

    <!--<item-->
        <!--android:id="@+id/currentUser"-->
        <!--android:title="@string/menu_title_currentUser"-->
        <!--android:orderInCategory="300"-->
        <!--app:showAsAction="never"-->
        <!--/>-->

    <!--<item-->
        <!--android:id="@+id/location"-->
        <!--android:title="Location"-->
        <!--android:orderInCategory="350"-->
        <!--app:showAsAction="never"-->
        <!--/>-->

    <!--<item-->
        <!--android:id="@+id/around"-->
        <!--android:title="Around"-->
        <!--android:orderInCategory="400"-->
        <!--app:showAsAction="never"-->
        <!--/>-->

    <item
        android:id="@+id/logOff"
        android:title="@string/menu_title_logoff"
        android:orderInCategory="400"
        app:showAsAction="never"
        />


</menu>
