<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdust.chatter.LoginActivity"
    android:background="#5C6BC0">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pidgey"
        android:adjustViewBounds="true"
        android:layout_centerHorizontal="true"
        android:maxWidth="230dp"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/username"
        android:hint="@string/username_hint"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="280dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:maxLines="1" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/password_hint"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:maxLines="1" />
    
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/signInBtn"
        android:id="@+id/signInBtn"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="25dp"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/registerBtn"
        android:id="@+id/registerBtn"
        android:layout_below="@+id/signInBtn"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
