<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdust.chatter.SignUp"
    android:id="@+id/relativeView"
    android:background="#5C6BC0">

    <include
        layout="@layout/app_bar"
        android:id="@+id/appBar"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/username_hint"
        android:ems="10"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/appBar"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_alignParentTop="true"
        android:enabled="true"
        android:maxLines="1" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:hint="@string/email_hint"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/username"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:maxLines="1" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/password_hint"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/email"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:maxLines="1" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordConfirm"
        android:hint="@string/password_confirm_hint"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/password"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:maxLines="1" />
    
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/registerBtn"
        android:text="@string/registerBtn"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/passwordConfirm"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
